Update Karen links.

--- a/karen.html
+++ b/karen.html
@@ -84,7 +84,11 @@
       <p>Paste text into the "Test" field. The characters will be shown
       in the fonts, along with hex codes.
       <p>Reference: <a href="http://www.kwekalu.net/" target="_blank">sample Karen in KNU encoding.</a>
-      <p>Text in Zwekabin font (Zawgyi-like): <a href="http://karenstudentcentre.org/">karenstudentcentre.org/</a>
+      <!-- 
+        <p>Text in Zwekabin font (Zawgyi-like): <a href="http://karenstudentcentre.org/" 
+          target="_blank">karenstudentcentre.org/</a>
+        -->
+      <p>Karen text in Unicode: <a href="https://www.jw.org/ksw"  target="_blank">jw.org/ksw/</a>
     </div>
 
 
