--- a/mon.html
+++ b/mon.html
@@ -48,12 +48,14 @@
 		  // alert(json_obj.converted);
 
           output_area.innerHTML = json_obj.converted;
+          output_area.value = json_obj.converted;
 		  var hex_area = document.getElementById('convertedHex');
           hex_area.value = textToHex(json_obj.converted);
           
 		  var msg_area = document.getElementById('msgArea');
           msg_area.innerHTML = json_obj.msg;         
-     }
+          msg_area.value = json_obj.msg;         
+    }
 	}
 	
 	// Set up the call.
