--- a/convert.html
+++ b/convert.html
@@ -51,6 +51,7 @@
 		  // alert(json_obj.converted);
 
           output_area.innerHTML = json_obj.converted;
+          output_area.value = json_obj.converted;
 		  var hex_area = document.getElementById('convertedHex');
           hex_area.value = textToHex(json_obj.converted);
           
@@ -61,6 +62,7 @@
 
 		  var msg_area = document.getElementById('msgArea');
           msg_area.innerHTML = json_obj.msg;         
+          msg_area.value = json_obj.msg;         
      }
 	}
 	
