--- a/convert2.html
+++ b/convert2.html
@@ -40,11 +40,13 @@
 		  // alert(json_obj.converted);
 
           output_area.innerHTML = json_obj.converted;
+          output_area.value = json_obj.converted;
 		  var hex_area = document.getElementById('convertedHex');
           hex_area.value = textToHex(json_obj.converted);
           
 		  var msg_area = document.getElementById('msgArea');
           msg_area.innerHTML = json_obj.msg;         
+          msg_area.value = json_obj.msg;         
      }
 	}
 	
