--- a/shan.html
+++ b/shan.html
@@ -117,27 +117,27 @@
       <textarea id="shanunicode"  class="shanunicode"
         rows="1" cols="30">{{default_unimon}}</textarea>
               ShanUnicode
-      <input type="button" value="-> Unicode" onclick="convertRequest('shanunicode', 'KNU')" />
+      <input type="button" value="-> Unicode" onclick="convertRequest('shanunicode', 'shanunicode')" />
     </div>
 
     <div>
       <textarea id="shanunicode2"  class="shanunicode2"
         rows="1" cols="30">{{default_unimon}}</textarea>
               Shan Unicode 2
-      <input type="button" value="-> Unicode" onclick="convertRequest('shanunicode2', 'KNU')" />
+      <input type="button" value="-> Unicode" onclick="convertRequest('shanunicode2', 'shanunicode2')" />
     </div>
      <div>
       <textarea id="panglong"  class='panglong'
         rows="1" cols="30">{{default_unimon}}</textarea>
               Panglong
-      <input type="button" value="-> Unicode" onclick="convertRequest('panglong', 'KNU')" />
+      <input type="button" value="-> Unicode" onclick="convertRequest('panglong', 'panglong')" />
     </div>
 
     <div>
       <textarea id="ZawgyiTai"  class='ZawgyiTai'
         rows="1" cols="30">{{default_unimon}}</textarea>
               Shan Tai
-      <input type="button" value="-> Unicode" onclick="convertRequest('ZawgyiTai', 'KNU')" />
+      <input type="button" value="-> Unicode" onclick="convertRequest('ZawgyiTai', 'ZawgyiTai')" />
     </div>
 
     <hr>
