Start refactoring transliteration.

--- a/convert2.html
+++ b/convert2.html
@@ -75,7 +75,7 @@
       <p><strong>Test:</strong>
       <p>
       <input type="text" id="TestEntry" class='notosans' size="40"
-        onchange="enterTestText(true)" value="{{input_text}}" placeholder="<enter text here>" />
+        onchange="enterTestText(true);" value="{{input_text}}" placeholder="<enter text here>" />
          (shown in NotoSans font)
       <div id="detectedZU"></div>
     </div>
