Fix some errors in conversion from Mon font hack to Unicode. Add Mon3 to fonts used.

--- a/mon.html
+++ b/mon.html
@@ -211,7 +211,13 @@
            <textarea id="monanonta"  class='monanonta'
         rows="1" cols="40">{{default_unimon}}</textarea>
       </div>
-    </div>    
+    </div>
+
+     <div onClick="showhide('mon3Section'); return false;" />Mon3</em></div>
+     <div id="mon3Section"  style="display: none;">
+           <textarea id="mon3"  class='mon3'
+        rows="1" cols="40">{{default_unimon}}</textarea>
+      </div>
   </div> <!-- id='other_fonts' -->
 
     <hr>
