Fix formatting of pages. Revised pages to be more readable. Update Karen langugage.

--- a/mon.html
+++ b/mon.html
@@ -114,8 +114,13 @@
 			<a href="/shan/">Shan</a> <br />
 			<a href="/mon/">Mon</a> <br />
 			<a href="/karen/">Karen</a>
-
-	    	<br /><br />
+                        <hr>
+                        <a href="http://www.unicode.org/charts/PDF/U1000.pdf">Myanmar Unicode</a>
+	    	        <br />
+                        <a href="http://www.unicode.org/charts/PDF/UAA60.pdf"> Extended-A</a>
+	    	        <br />
+                        <a href="http://www.unicode.org/charts/PDF/UA9E0.pdf"> Extended-B</a>
+	    	        <br />
             <input type='button' value='Toggle fonts'
                 onClick="showhide('other_fonts'); return false;" />
         </div>
