Fix reference to KNU content online.

--- a/karen.html
+++ b/karen.html
@@ -85,7 +85,7 @@
   
       <p>Paste text into the "Test" field. The characters will be shown
       in the fonts, along with hex codes.
-      <p>Reference: <a href="http://www.kwekalu.net/" target="_blank">sample Karen in KNU encoding.</a>
+      <p>Reference: <a href="http://www.drumpublications.org/announcements.php" target="_blank">sample Karen in KNU encoding.</a>
       <!-- 
         <p>Text in Zwekabin font (Zawgyi-like): <a href="http://karenstudentcentre.org/" 
           target="_blank">karenstudentcentre.org/</a>
