Add range limits (min, max) for showing characters

--- a/fontsView.html
+++ b/fontsView.html
@@ -167,7 +167,7 @@ function buildEncodingTable(table) {
   <h1>{{language}} code points to fonts</h1>
   <p>This table gives the code points and characters shown in several
     font encodings for {{language}}. Conversions to Unicode appear for each entry.
-  <p>Hint: hover over the Unicode conversions for the hex code points (UTF-16).
+  <p>Hint: hover over the text areas for hex code points.
   <table id='codetable' border="1">
   </table>
 
