Update references to source of Mon and Shan Unicode data.

--- a/mon.html
+++ b/mon.html
@@ -96,11 +96,9 @@
     </div>
         
   <div>
-		<div class="span-16">    <p>Try: <a href="http://burmese.monnews.org/" target="_blank">Sample Unicode text</a>
-		or 
-    <a href="http://www.kaowao.org/mon/" target="_blank">Sample Mon / Mon 2012 font data</a>
-    or <a href="http://zawgyi-unicode-test.appspot.com/mon/?text=%E1%80%82%E1%80%B1%20%E1%80%82%E1%80%BC%E1%80%82%E1%80%A2%20%E1%80%82%E1%80%A6%20%E1%80%82%E1%80%A8%20%E1%80%82%E1%80%AA%20%E1%80%82%E1%80%B3%20%E1%80%82%E1%80%B4%20%E1%80%82%E1%80%B5%20%E1%80%82%E1%80%B9%20%E1%80%82%E1%80%BA%20%E1%80%82%E1%80%BB%20%E1%80%82%E1%80%BC%20%E1%80%82%E1%80%BD%20%E1%80%82%E1%80%BE%20%E1%80%82%E1%80%BF%20%E1%80%82%E1%81%8E%20%E1%80%82%E1%81%90%20%E1%80%82%E1%81%91%20%E1%80%82%E1%81%92%20%E1%80%82%E1%81%93%20%E1%80%82%E1%81%94%20%E1%80%82%E1%81%95%20%E1%80%82%E1%81%96%20%E1%80%82%E1%81%97%20%E1%80%82%E1%81%98%20%E1%80%82%E1%81%99%20%E1%80%82%E1%81%9A%20%E1%80%82%E1%81%9B%20%E1%80%82%E1%81%9C%20%E1%80%82%E1%81%9D%20%E1%80%82%E1%81%9E%20%E1%80%82%E1%81%9F%20%E1%80%82%E1%82%98%20%E1%80%82%E1%82%99%20%E1%80%82%E1%82%9A%20%E1%80%82%E1%82%9B%20%E1%80%82%E1%82%9C%20%E1%80%82%E1%82%9D%20%E1%80%82%E1%82%9E%20%E1%80%82%E1%82%9F"
-    target="_blank">Test non-standard characters</a>
+		<div class="span-16">    <p>Mon in Unicode: <a href="http://mon.monnews.org/" target="_blank">mon.monnew.org</a>
+                      <p><a href="http://zawgyi-unicode-test.appspot.com/mon/?text=%E1%80%82%E1%80%B1%20%E1%80%82%E1%80%BC%E1%80%82%E1%80%A2%20%E1%80%82%E1%80%A6%20%E1%80%82%E1%80%A8%20%E1%80%82%E1%80%AA%20%E1%80%82%E1%80%B3%20%E1%80%82%E1%80%B4%20%E1%80%82%E1%80%B5%20%E1%80%82%E1%80%B9%20%E1%80%82%E1%80%BA%20%E1%80%82%E1%80%BB%20%E1%80%82%E1%80%BC%20%E1%80%82%E1%80%BD%20%E1%80%82%E1%80%BE%20%E1%80%82%E1%80%BF%20%E1%80%82%E1%81%8E%20%E1%80%82%E1%81%90%20%E1%80%82%E1%81%91%20%E1%80%82%E1%81%92%20%E1%80%82%E1%81%93%20%E1%80%82%E1%81%94%20%E1%80%82%E1%81%95%20%E1%80%82%E1%81%96%20%E1%80%82%E1%81%97%20%E1%80%82%E1%81%98%20%E1%80%82%E1%81%99%20%E1%80%82%E1%81%9A%20%E1%80%82%E1%81%9B%20%E1%80%82%E1%81%9C%20%E1%80%82%E1%81%9D%20%E1%80%82%E1%81%9E%20%E1%80%82%E1%81%9F%20%E1%80%82%E1%82%98%20%E1%80%82%E1%82%99%20%E1%80%82%E1%82%9A%20%E1%80%82%E1%82%9B%20%E1%80%82%E1%82%9C%20%E1%80%82%E1%82%9D%20%E1%80%82%E1%82%9E%20%E1%80%82%E1%82%9F"
+    target="_blank">Show test characters</a>
     <div>
       <p><strong>Input the test data:</strong>
       <input type="text" id="TestEntry" class='notosans' size="40"
