Add S'gaw Karen keyboard.

--- a/keyboard.html
+++ b/keyboard.html
@@ -29,6 +29,7 @@
       controller.loadLayout('my');
       //controller.loadLayout('shn');
       //controller.loadLayout('mnw');
+      //controller.loadLayout('ksw');
       controller.reposition(input, 2, 0, [1, 0, 0, 0]);
       controller.register(input);
       controller.addEventListener('kc', function() { visible = false; });
@@ -60,6 +61,7 @@
 
       <option value="shn">Shan</option>
       <option value="mnw">Mon</option>
+      <option value="ksw">S'gaw Karen</option>
       <option value="my">Burmese</option>
 
     </select>
