Moving toward working prototype of keyboard.

--- a/keyboard.html
+++ b/keyboard.html
@@ -49,6 +49,11 @@
     document.getElementById(outputId).focus();
   }
 
+  function toggle() {
+    if (controller) {
+      controller.setVisible(visible = !visible);
+    }
+  }
 
     </script>
   </head>
