Update Shan Panglong reference to ="panglong.org"

--- a/shan.html
+++ b/shan.html
@@ -79,7 +79,7 @@
     <p>Paste Myanmar text into the "Test" field. The characters will be shown
     in the fonts, along with hex codes.
     <p>Shan language sites in Unicode:
-      <a href="http://shan.panglong.org/t/" target="_blank">Shan Panglong</a>,
+      <a href="http://http://panglong.org/" target="_blank">Shan Panglong</a>,
      <a href="http://www.shanwomen.org/tai/" target="_blank">Shan Women</a>,
      <a href="http://panglong.org/" target="_blank">Shan Herald Agency for News</a>
     </div>
