--- a/convert.html
+++ b/convert.html
@@ -128,6 +128,7 @@
 	    	        <br />
             <input type='button' value='Toggle fonts'
                 onClick="showhide('other_fonts'); return false;" />
+            <input type='button' value='Toggle keyboard' onClick="toggleKeyboard(); return false;" />
     </div>
     </div>  <!-- container -->
     
