Fix kehyboard Javascript. Fix ordering on Shan keyboard.

--- a/keyboard.html
+++ b/keyboard.html
@@ -19,7 +19,7 @@
 
     // Myanmar keyboards
     function onPageLoaded() {
-      var langIds = ['shn', 'mnw', 'ksv', 'my'];
+      var langIds = ['shn', 'mnw', 'ksw', 'my'];
       var controller = setupKeyboard('t1', langIds, 'selectKeyboard');
     }
 
