Fixing one more conversion U->Z and also the normalization of subscripted consonants.

--- a/convertUZ.html
+++ b/convertUZ.html
@@ -253,7 +253,7 @@
       
       <input type="submit" value="Convert hex to text" onSubmit="enterHex()" />
       <input type="button" value="-> scratch" onclick="copyText('hexText', 'scratchText')" />
-      <input type="button" value="-> Unicode" onclick="hexToOutput('hexText', 'notoSans')" />
+      <input type="button" value="-> Unicode" onclick="hexToOutput('hexText', 'notosans14')" />
       <input type="button" value="-> Zawgyi" onclick="hexToOutput('hexText', 'z1')" />
       <input type="button" value="-> Myazedi" onclick="hexToOutput('hexText', 'myazedi')" />
     
