--- a/convert2.html
+++ b/convert2.html
@@ -3,22 +3,44 @@
     <title>Convert Myanmar Text with Fonts, including Mon
    </title>
 
+  <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print"> 
+  <!--[if lt IE 8]>
+    <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
+  <![endif]-->
+  
   <link rel="stylesheet" type="text/css" href="/css/fonts.css">
   
    <script type="text/javascript" src="/js/shake-n-break.js">
    </script>
 
-  <script type="text/javascript" src="/js/myzu.js">
+  <script type="text/javascript" src="/js/myzu.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/myanmar-tools/1.1.0/zawgyi_converter.min.js">
   </script>
   
   <script type="text/javascript" >
+  // Initialize the Z-U converter
+  const zawgyi_converter = new google_myanmar_tools.ZawgyiConverter();
+
   // Code to request transliteration (conversion) and handle the return. 
   function convertRequest(source, type) {
     // Get the text and prepare the call to server.
     source_element = document.getElementById(source);
-    text_in = encodeURIComponent(source_element.value);
     
+    if (type == 'Z') {
+        // Just call the javascript version.
+        text_in = source_element.value;
+        var outText = zawgyi_converter.zawgyiToUnicode(text_in);
+	var output_area = document.getElementById('convertedText');
+        output_area.innerHTML = output_area.value = outText;
+        
+	var hex_area = document.getElementById('convertedHex');
+        hex_area.value = textToHex(json_obj.converted);
+        return;
+    }
     // Prepare for the call to the backendvar xmlhttp;
+    text_in = encodeURIComponent(source_element.value);
 	if (window.XMLHttpRequest)
 	  {
 	  // code for IE7+, Firefox, Chrome, Opera, Safari
