New links and update compare options (more needed)

--- a/convertUZ.html
+++ b/convertUZ.html
@@ -213,6 +213,8 @@
 
       <br />
       <a href="https://www.unicode.org/notes/tn11/UTN11_3.pdf">Representing Myanmar in Unicode</a>
+      <a href="https://www.unicode.org/faq/myanmar.html">Unicode FAQ</a>
+      <a href="https://my.wikipedia.org/wiki/Wikipedia:Font">Wikipedia:Font</a>
       <br />
 
       <!--
